# Mirror7

./: .gitignore  CMakeLists.txt  README.md
docs/: AGENT_README.md  DSP_ANALYSIS.md  ECOSYSTEM_INVENTORY.md  KNOWLEDGE_MAPPING.md  NEXT_STEPS_TODO.md  PAPER_TASK_MAPPING.md  RESEARCH_SOURCES.md  TESTING.md  UNCONVENTIONAL_RESEARCH.md
legacy/: README.md
modules/: README.md
modules/control/: tempo.cpp  tempo.hpp
modules/core/: modal_engine.hpp  state.hpp
modules/dsp/: dialogue.hpp  dsp.cpp  dsp_api.hpp  scheduler.hpp  spatial_utils.hpp
modules/harmony/: adapter.cpp  harmony.cpp  harmony.hpp
resources/spatial_assets/cefg/: uteroid_phi.cefg
scripts/: generate_embeddings.py  knowledge_ingest_mirror7.py  post_build_fix_moduleinfo.py
source/config/: ParamIDs.h
source/engine/: DialogueSystem.cpp  DialogueSystem.h  Mirror7Engine.cpp  Mirror7Engine.h  NoiseController.cpp  NoiseController.h  Spatializer.cpp  Spatializer.h
source/gui/: PluginEditor.cpp  PluginEditor.h
source/plugin/: PluginProcessor.cpp  PluginProcessor.h
tests/: DialogueTest.cpp  EngineSmokeTest.cpp  SpatializerTest.cpp
